call-to-action HTML added the call to action content, fixed spacing

--- a/website/style.css
+++ b/website/style.css
@@ -75,13 +75,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1% 20% 5% 20%;
+    padding: 5% 20% 5% 20%;
 }
 
 .carousel-header {
     font-size: 36px;
     color: #1F2937;
-    margin-bottom: 32px;
+    margin-bottom: 5%;
 }
 
 .carousel-content {
@@ -113,7 +113,7 @@
 .quote-content {
     display: flex;
     flex-direction: column;
-    padding: 1% 18% 5% 18%;
+    padding: 5% 18% 5% 18%;
     background-color: #E5E7EB;
     
 }
@@ -122,7 +122,7 @@
     font-size: 36px;
     font-weight: 200;
     font-style: italic;
-    margin-top: 32px;
+   
 }
 
 .quote-by {
